@@ -43,7 +43,7 @@ Vue.component('lms-search-list', {
  <v-text-field :label="notFoundTimer ? i18n('Not found') : ACTIONS[SEARCH_LIST_ACTION].title" persistent-hint :error="notFoundTimer" :single-line="!notFoundTimer" clearable autocorrect="off" v-model.lazy="term" class="lms-search lib-search" @input="textChanged($event)" @blur="stopDebounce" v-on:keyup.enter="searchNow(false)" @click:clear="cleared" ref="entry"></v-text-field>
  <v-btn flat v-if="!empty" icon :title="i18n('Previous match')" :disabled="notFoundTimer" style="margin-right:-6px!important" class="toolbar-button" @click="searchNow(true)"><v-icon>arrow_upward</v-icon></v-btn>
  <v-btn flat v-if="!empty" icon :title="i18n('Next match')" :disabled="notFoundTimer" style="margin-right:-6px!important" class="toolbar-button" @click="searchNow(false)"><v-icon>arrow_downward</v-icon></v-btn>
- <v-btn flat v-if="msearch" icon :title="i18n('Search library')" :disabled="notFoundTimer" class="toolbar-button" @click="searchMusic"><img class="svg-img" :src="'search-library' | svgIcon(darkUi)"></img></v-btn>
+ <v-btn flat v-if="msearch" icon :title="ACTIONS[SEARCH_LIB_ACTION].title" :disabled="notFoundTimer" class="toolbar-button" @click="searchMusic"><img class="svg-img" :src="ACTIONS[SEARCH_LIB_ACTION].svg | svgIcon(darkUi)"></img></v-btn>
 </v-layout>
 `,
     props: {
