@@ -7,6 +7,7 @@
 4. Fix showing detailed sub-toolbar on mobile layout.
 5. Only draw blurred background in detailed sub-toolbar if browse view is set
    to draw background images.
+6. Consistent search library icon.
 
 5.2.4
 -----
